--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -855,6 +855,8 @@
                 layer.msg("请先设置视频源~~~");
 			}else{
 
+                layer.msg("正在连麦~~");
+
                 hideVideoSourceSelectDialog();
 
                 if(ipcRenderer == null){
