--- a/public/schoolClass/videoSourceSelect.html
+++ b/public/schoolClass/videoSourceSelect.html
@@ -163,7 +163,7 @@
 
     function detectRtspCameraAudio(onDetectFinish){
         var audios = new Array();
-        var audioHtml = "<span class='left'>音&nbsp&nbsp&nbsp&nbsp&nbsp频\n</span><div class='right-item' style='margin-left: 1px'>";
+        var audioHtml = "<span class='left'>音&nbsp&nbsp&nbsp&nbsp&nbsp频\n</span><div class='right-item right-item-2' style='margin-left: 1px'>";
         navigator.mediaDevices.enumerateDevices()
             .then(function (devices) {
                 devices.forEach(function (device) {
