--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -532,7 +532,7 @@ video{
 		 }else{
 			 removeMaiUser(user.colUid);
 		 }
-	 }else if(command = 'elearnig_mute_audio'){
+	 }else if(command == 'elearnig_mute_audio'){
 		 var type = info.data.type;
 		 var streamId = info.data.streamId;
 		 //让其静音
