修复rtsp记不住的问题

--- a/public/schoolClass/videoSourceSelect.html
+++ b/public/schoolClass/videoSourceSelect.html
@@ -152,7 +152,7 @@
                 $("#rtsUrl").css("display", "block");
             })
             $("#rtsp_url").blur(function () {
-                rtspUrlArr = JSON.parse(localStorage.getItem("rtspUrl")) == null ? rtspUrlArr : JSON.parse(localStorage.getItem("rtspUrlArr"))
+                rtspUrlArr = JSON.parse(localStorage.getItem("rtspUrl")) == null ? rtspUrlArr : JSON.parse(localStorage.getItem("rtspUrl"))
                 setTimeout(function () {
                     $("#rtsUrl").css("display", "none");
                 }, 300)
