--- a/public/schoolClass/videoSourceRtspInClass.html
+++ b/public/schoolClass/videoSourceRtspInClass.html
@@ -102,6 +102,29 @@
     }
 
     function mixMicStream(tabStream,onfinish){
+
+        const constraints = {
+            video: {
+                mandatory: {
+                    chromeMediaSource: 'desktop',
+                    maxWidth:320,
+                    minWidth:320,
+                    maxHeight:240,
+                    minHeight:240,
+                    maxFrameRate:20,
+                    minFrameRate:20
+                }
+            }
+        };
+
+        var videoTracks = tabStream.getVideoTracks();
+        if(videoTracks && videoTracks.length && videoTracks.length > 0) {
+            var videoTrack = videoTracks[0];
+            videoTrack.applyConstraints(constraints);
+        }
+
+
+
         var micConstraints = {
             audio: true,
             video: false
