--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -14,10 +14,24 @@
     暂无打开的课件
     </div>
 
-
     <div id="pushTopic">
     题库
     </div>
+
+    <div id="album">
+    选图
+    </div>
+
+    <div id="shouTu">收图</div>
+
+    <div class="imageBox">
+        <img id="image" src="http://img3.redocn.com/tupian/20150908/sansuitaoxinbiankuang_3797288.jpg" alt="">
+        <div class="pushImage-navigation">
+            <div class="close_img" onclick="closeImage()">关闭</div>
+            <button class="pushImageBtn" onclick="pushImage()">推图</button>
+        </div>
+    </div>
+
 
     <div class="topic_box">
         <div class="topic_nav">
@@ -53,15 +67,15 @@
 
 </body>
 
-<script src="./js/simple_websocket_connection.js" type="text/javascript"></script>
+<script src="./js/clazz_websocket_connection.js"></script>
+<script src="./js/layer/layer.js"></script>
+<script src="https://res.wx.qq.com/open/js/jweixin-1.3.0.js"></script>
 <script>
-//   var userId = 28551;
-//   vid = 221822;
 
    var vid = Service.getQueryString("vid");
    var userId = Service.getQueryString("userId");
    var HTML_LIST="";
-   var simpleMS = new SimpleConnection();
+   var clazzConn = new ClazzConnection();
    var randomNumber = RandomNumBoth(1000000,2000000);
    var defaultPageNo = 1;
    var parentId = -1;
@@ -83,7 +97,14 @@
 
    var iframeBox = document.getElementById("iframeBox");
    var iframe = document.createElement("iframe");
-
+   var picUrl = "http://img3.redocn.com/tupian/20150908/sansuitaoxinbiankuang_3797288.jpg";
+var loginPro = {
+    "command": "assistantLogin",
+    "data": {
+        "vid": vid,
+        "userId": userId
+    }
+};
    $(function(){
           iframe.setAttribute("id","ifr");
           iframe.setAttribute("name","ifr");
@@ -91,35 +112,38 @@
           iframe.setAttribute("scrolling","no");
           iframe.setAttribute("style","width: 1px; min-width: 100%; *width: 100%");
           iframeBox.appendChild(iframe);
-          simpleMS.connect();
+          clazzConn.connect(loginPro);
+
+          //获取微信签名
+          getWeChatSignature();
           getClassOpenedKejian(vid);
           filterCloudFile();
           //获取蚁盘文件根目录
           getUserRootCloudSubjects(userId,true);
-   })
+   });
 
    //监听
-   simpleMS.clazzWsListener = {
+   clazzConn.clazzWsListener = {
         onError: function (errorMsg) {
-            console.log(errorMsg);
+            console.error(errorMsg);
+            layer.msg(errorMsg);
           }, onWarn: function (warnMsg) {
-            console.log(warnMsg);
+            console.warn(warnMsg);
           }, onMessage: function (info) {
-             if(info.command == 'pushTopicInAssistantSuccess'){
-                 var roomid = info.data.vid;
-                 if(roomid == vid){
-                     layer.msg('推送成功');
-                 }
-             }else if(info.command == 'assistantPlayKejianInWindow'){ //从ＰＣ端推过来
-                 var roomid = info.data.roomid;
-                 if(roomid == vid){
-                    console.log(info,'infoooooooooo');
+             if(info.command == 'pushSubjecShowContentUrl'){
+                     layer.msg('推题成功');
+             }else if(info.command == 'class_ppt'){ //更换课件
+                 if(info.data.html){
                     checkIframe(info.data.html,true);
-
                  }
+             }else if(info.command == 'assistantLogin'){ //登录
+                          layer.msg('已登入!',{time: 500});
+             }else if(info.command == "pushHandout"){
+                     layer.msg('推图成功',{time: 500});
+//                 }
              }
           }
-        };
+   };
 
 
     function getMoreTopic(){
@@ -144,16 +168,13 @@
         if(quesArr.length <= 0){
             layer.msg("请先选中要推送的题目");
         }else{
-            var protocal = eval('(' + "{'command':'pushTopicInAssistant','data':{'sids':'"+quesArr.join(',')+"',vid:'"+vid+"'}}" + ')');
-            simpleMS.send(protocal);
+            var protocal = eval('(' + "{'command':'pushSubjecShowContentUrl','data':{'sids':'"+quesArr.join(',')+"'}}" + ')');
+            clazzConn.send(protocal);
         }
     }
 
 
     function topicClickFolder(id,name){
-//        console.log(id);
-//        console.log(name);
-//        console.log('文件夹');
         quesArr.splice(0);
         pageNo = 1;
         parentTopicArray.push({
@@ -167,9 +188,6 @@
     }
 
     function checkboxOnchange(e,id){
-        console.log(e);
-        console.log(id);
-//        console.log(,'prev');;
         $(e).prev().toggleClass('active');
         if (e.checked) {
                 quesArr.push(id)
@@ -204,7 +222,6 @@
            };
            service.doWebService(data,{
                onResponse:(res) => {
-                   console.log(res,'蚁盘题目根目录');
                    if(res.success && res.response){
                        var response = res.response;
                        //导航栏
@@ -219,7 +236,7 @@
                            $('.nav_text').html(navHtml);
                        }
                        for(var k in response){
-                           console.log(response[k].fileType,'');
+//                           console.log(response[k].fileType,'');
                            if(response[k].fileType == 1){ //文件夹
                                listHtml += "<div class='line_public' onclick='topicClickFolder("+response[k].id+",\""+response[k].name+"\")'> <img class='item-image' src='./img/cloud_icon_web.png' alt=''> <span class='item-text text-hidden'>"+response[k].name+"</span> </div>";
                            }else if(response[k].fileType == 2){ // 题目
@@ -242,17 +259,14 @@
 
 
        function nav_topic(id,index){
-//           console.log(index,'index');
            navHtml = '';
            listHtml = '';
            topicId = id;
            pageNo = 1;
            quesArr.splice(0);
            parentTopicArray = parentTopicArray.splice(0,index+1);
-
            if(id == -1){//根目录
                getUserRootCloudSubjects(userId,true);
-//               console.log(parentTopicArray,'parentTopicArray');
            }else{ //子目录
 
                listCloudSubject(id,true);
@@ -271,7 +285,6 @@
            };
            service.doWebService(data,{
                onResponse:(res) => {
-                   console.log(res,'蚁盘题目');
                    if(res.success && res.response){
                        var response = res.response;
                        //导航栏
@@ -319,7 +332,7 @@
        };
        service.doWebService(data,{
            onResponse:(res) => {
-               console.log(res,'success');
+//               console.log(res,'success');
                if(res.success && res.response){
                    document.getElementById('empty').style.display="none";
                    document.getElementById('iframeBox').style.display="block";
@@ -382,9 +395,9 @@
        newHTMLPath = newHTMLPath.replace("http://60.205.111.227","https://www.maaee.com");
        iframe.setAttribute("src","https://www.maaee.com/Excoord_For_Education/drawboard/main_app.html?vid="+vid+"&userId="+randomNumber+"&role=manager&ppt="+newHTMLPath+"");
        if(!flag){
-           var protocal = eval('(' + "{'command':'assistantPlayKejian','data':{'roomid':'"+vid+"','html':'"+newHTMLPath+"','userId':'"+userId+"'}}" + ')');
+           var protocal = eval('(' + "{'command':'class_ppt','data':{'control':1,'html':'"+newHTMLPath+"','vid':'"+vid+"'}}" + ')');
            //推送通知
-           simpleMS.send(protocal);
+           clazzConn.send(protocal);
        }
        AddAttachmentChange('none');
        document.getElementById('empty').style.display="none";
@@ -411,7 +424,7 @@
        };
        service.doWebService(data,{
            onResponse:(res) => {
-               console.log(res,'filterCloudFile');
+//               console.log(res,'filterCloudFile');
                if(res.success){
                    var attachment_list = document.getElementById('attachment_list');
                    var attachment_bottom = document.getElementById('attachment_bottom');
@@ -489,8 +502,168 @@
        window.requestAnimationFrame(function(){
           attachment_box.style.transform = style == 'block'?"translateY(0%)":"translateY(100%)";
        })
+   }
+
+
+   function getWeChatSignature(url) {
+       url = window.location.href;
+       $.ajax({
+           type: "POST",
+//            url: "http://192.168.50.34:9006/Excoord_ApiServer/webservice",
+            url: "https://www.maaee.com/Excoord_For_Education/webservice",
+           data: {
+               params: JSON.stringify({
+                   "method": 'getWeChatSignature',
+                   "url": url,
+               })
+           },
+           success: function (ret) {
+               var res = JSON.parse(ret).response;
+               wx.config({
+                   debug: false,
+                    appId: 'wx181574f3ea687daf',  // 线上用的
+//                   appId: 'wx9d076742b77044dd',   //测试用的
+                   timestamp: res.timestamp,
+                   nonceStr: res.noncestr,
+                   signature: res.signature,
+                   jsApiList: [
+                       "checkJsApi",
+                       'chooseImage',
+                       'uploadImage',
+                       'downloadImage',
+                       'scanQRCode',
+                       'getLocalImgData',
+                   ]
+               });
+               wx.ready(function () {
+                   wx.checkJsApi({
+                       jsApiList: [
+                           "checkJsApi",
+                           'chooseImage',
+                           'uploadImage',
+                           'downloadImage',
+                           'scanQRCode',
+                           'getLocalImgData',
+                       ],
+                       success: function (res) { }
+                   });
+               })
+               wx.error(function (res) {
+                   console.error(res);
+               });
+           },
+           error: function (responseStr) {
+               layer.msg("签名请求出错,选图功能暂不可用");
+           }
+       });
+   }
+
+
+   //相机点击事件
+   $('#album').click(function () {
+       wx.chooseImage({
+           count: 1, // 默认9
+           sizeType: ['original'], // 可以指定是原图还是压缩图，默认二者都有
+           sourceType: ['album'], // 可以指定来源是相册还是相机，默认二者都有
+           success: (res) => {
+               var tempFilePaths = res.localIds[0];
+               let load = layer.load(0, { shade: 0.1 });
+               wxUploadImage(tempFilePaths,load);
+
+           }
+       });
+   })
+
+   //相册及相机上传图片事件
+   function wxUploadImage(tempFilePaths,load){
+       wx.uploadImage({
+           localId: tempFilePaths, // 需要上传的图片的本地ID，由chooseImage接口获得
+           isShowProgressTips: 0, // 默认为1，显示进度提示
+           success: function (res) {
+               let serverId = res.serverId; // 返回图片的服务器端ID
+               wx.downloadImage({
+                   serverId: serverId, // 需要下载的图片的服务器端ID，由uploadImage接口获得
+                   isShowProgressTips: 0, // 默认为1，显示进度提示
+                   success: function (res) {
+                       var localId = res.localId; // 返回图片下载后的本地ID
+                       wx.getLocalImgData({
+                           localId: localId,
+                           success: function (res) {
+                               var localData = res.localData;
+                               if (localData.indexOf('data:image') != 0) {
+                                   //判断是否有这样的头部
+                                   localData = 'data:image/jpg;base64,' + localData
+                               }
+                               localData = localData.replace('jgp', 'jpg');
+                               var $Blob = getBlobBydataURI(localData, 'image/jpeg');
+                               var formData = new FormData();
+                               formData.append("filePath", $Blob, "file_" + Date.parse(new Date()) + ".png");
+                               $.ajax({
+                                   type: "POST",
+                                   url: "https://jiaoxue.maaee.com:8890/Excoord_Upload_Server/file/upload",
+                                   enctype: 'multipart/form-data',
+                                   data: formData,
+                                   // 告诉jQuery不要去处理发送的数据
+                                   processData: false,
+                                   // 告诉jQuery不要去设置Content-Type请求头
+                                   contentType: false,
+                                   success: function (res) {
+                                       picUrl = res;
+                                       $("#image").attr("src",picUrl);
+                                       $('.imageBox').show();
+                                       layer.close(load);
+                                   },
+                                   error: function (res) {
+                                       layer.msg('上传图片失败,请重试');
+                                   }
+                               });
+                           }
+                       });
+                   }
+               });
+
+           }
+       });
+   }
+
+   function getBlobBydataURI(dataURI, type) {
+       var binary = atob(dataURI.split(',')[1]);
+       var array = [];
+       for (var i = 0; i < binary.length; i++) {
+           array.push(binary.charCodeAt(i));
+       }
+       return new Blob([new Uint8Array(array)], { type: type });
+   }
+
+  //ｓｅｎｄ　推图
+   function pushImage(){
+       var protocal = eval('(' + "{'command':'pushHandout','data':{'url':'"+picUrl+"',vid:'"+vid+"'}}" + ')');
+       clazzConn.send(protocal);
 
 
    }
+
+   function closeImage(){
+       $('.imageBox').hide();
+   }
+
+
+   $('#shouTu').on('click',function(){
+       if($('#shouTu').text() == '收图'){
+           //点击收图逻辑
+          var protocal = eval('(' + "{'command':'class_shoutu','data':{'type':0,'now':'"+new Date().getTime()+"'}}" + ')');
+          clazzConn.send(protocal);
+          $('#shouTu').addClass('stop_shou');
+          $('#shouTu').text('关闭');
+       }else{
+           //点击取消逻辑
+          var protocal = eval('(' + "{'command':'class_shoutu','data':{'type':1,'now':'"+new Date().getTime()+"'}}" + ')');
+          clazzConn.send(protocal);
+          $('#shouTu').removeClass('stop_shou');
+          $('#shouTu').text('收图');
+
+       }
+
+   })
 </script>
 </html>
