--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -234,16 +234,36 @@ video{
 
 }
 .closeIcon{
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      z-index: 102;
-      background: url(img/del_icon_s.png) no-repeat #fff;
-      background-size: 100% 100%;
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-   }
+     position: absolute;
+     top: 20px;
+     right: 20px;
+     z-index: 102;
+     background: url(img/icon-delPic.png) no-repeat;
+     background-size: 100% 100%;
+     width: 28px;
+     height: 28px;
+     cursor: pointer;
+}
+.closeIconHover{
+     position: absolute;
+     top: 20px;
+     right: 20px;
+     background: url(img/icon-delPicH.png) no-repeat;
+     background-size: 100% 100%;
+     width: 28px;
+     height: 28px;
+     cursor: pointer;
+     z-index: 102;
+}
+.shouTuText{
+    text-align: center;
+    color: #e5e5e5;
+    font-size: 28px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-51%, -50%);
+    left: 50%;
+}
 @keyframes upup {
   0% {
     transform: translateY(0%);
@@ -820,7 +840,11 @@ video{
 	         closeAllInClass();
 	     }
 	 }else if(command == "pushSubjecShowContentUrl"){
-	     showTopicStu(info.data.students);
+	     closeAllInClass();
+	     if(info.data.students){
+	         layer.closeAll();
+	         showTopicStu(info.data.students);
+	     }
 	 }else if(command == "class_shoutu"){
 	     if(info.data.type == 0){
 	        showReceive();
@@ -908,9 +932,6 @@ video{
      $("#ppt_frame").attr("src",url);
 
      if(sendCommand){
-//         var protocal = eval('(' + "{'command':'assistantPlayKejianInWindow','data':{'roomid':'"+vid+"','html':'"+newHTMLPath+"','userId':'"+userId+"'}}" + ')');
-//         //推送通知
-//         simpleConn.send(protocal);
     	 var protocal = eval('(' + "{'command':'class_ppt','data':{'control':1,'html':'"+newHTMLPath+"'}}" + ')');
     	 connection.send(protocal);
     	 //让新版的学生端显示ppt
@@ -2381,8 +2402,11 @@ video{
 	          "</div>";
 	    }
 
-	    $('.receiveBox').html(html+"<div class=\"closeIcon\" onclick=\"closeAllInClass()\"></div>");
-
+	    if(html == ''){
+        	        $('.receiveBox').html(html+"<div class=\"closeIcon\" onclick=\"closeAllInClass()\"></div><div class='shouTuText'>老师已开启收图模式...</div>");
+        }else{
+        	        $('.receiveBox').html(html+"<div class=\"closeIcon\" onclick=\"closeAllInClass()\"></div>");
+        }
 	}
 
 	function updateStuList(){
@@ -2393,7 +2417,7 @@ video{
 	        var animation = topicUidList.indexOf(students[k].id) == -1?'topicItem':'topicItemAnimation';
 	        html += "<div class="+animation+">"+
                      "          <div class='topicImgBox'>"+
-                     "             <img class='topicAvatar' src='http://192.168.50.34:8080/Excoord_For_Education//images/1-141012103336-50-1.jpg' alt=''>\n"+
+                     "             <img class='topicAvatar' src='https://www.maaee.com/Excoord_For_Education//images/1-141012103336-50-1.jpg' alt=''>\n"+
                      "             <div class="+className+"></div>"+
                      "          </div>"+
                      "          <div class='topicName'>"+students[k].name+"</div>"+
@@ -2415,6 +2439,19 @@ video{
         var seconds=Math.round(leave3/1000)
         return hours+":"+minutes+":"+seconds;
 	}
+
+
+	$(document).on('mousemove','.closeIcon',function(){
+    	   $('.closeIcon').addClass('closeIconHover');
+    });
+
+    $(document).on('mouseleave','.closeIcon',function(){
+           $('.closeIcon').removeClass('closeIconHover');
+    });
+
+    $(document).on('click','.closeIcon',function(){
+           $('.closeIcon').removeClass('closeIconHover');
+    });
 
 </script>
 
