--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -312,7 +312,7 @@
         if(browser.indexOf("Electron") != -1){
             NParams = "&startType=1_n";
         }
-        var url = "teacherUnionMaster.html?clazzId="+clazzId+"&userId="+teacherId+"&title="+title+"&livePassword="+password+"&userName="+teacherName+""+NParams;
+        var url = "teacherUnionMaster_screen.html?clazzId="+clazzId+"&userId="+teacherId+"&title="+title+"&livePassword="+password+"&userName="+teacherName+""+NParams;
         window.open(url,"CLASS_WINDOW");
     }
 
