--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -56,7 +56,7 @@ video{
 	object-fit:cover;
 }
 #big_video video{
-	object-fit:contain !important;
+	object-fit:cover !important;
 }
 .video_nocover{
 	object-fit:none;
