--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -70,7 +70,7 @@
 	   object-fit:cover;
    }
    #big_video video{
-  	 object-fit:contain !important;
+  	 object-fit:cover !important;
    }
 
 
@@ -1073,7 +1073,7 @@
 		client.on('stream-added', function (evt) {
 			  var stream = evt.stream;
 			  $('div#video_container #agora_remote'+stream.getId()).remove();
-			  $('div#video_container').append('<div class="mai_stream_user" uid="'+stream.getId()+'" id="agora_remote'+stream.getId()+'" style="width: 230px; height: 160px; position: relative;margin: 12px 5px 0 5px;"><img style="color:red;" class="radio_no" id="audio_'+stream.getId()+'"/></div>');
+			  $('div#video_container').append('<div class="mai_stream_user" uid="'+stream.getId()+'" id="agora_remote'+stream.getId()+'" style="width: 230px; height: 160px; position: relative;margin: 12px 5px 0 5px; overflow: hidden;float:left"><img style="color:red;" class="radio_no" id="audio_'+stream.getId()+'"/></div>');
 
 			  client.subscribe(stream, "agora_remote"+stream.getId());
 		});
