--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -40,7 +40,9 @@
 	<script type="application/javascript" src="./js/platform.js"></script>
 
 <style type="text/css">
-  
+	body{
+		overflow: hidden;
+	}
    .nav_selected{
 	   color:red;
    }
