--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -43,7 +43,9 @@
 <script type="application/javascript" src="./js/platform.js"></script>
 
 <style type="text/css">
-
+body{
+	overflow: hidden;
+}
 .indicator_selected {
 	color: #000;
 	border-bottom: 2px solid #3a9cfc;
